testsuite/tests/parser/should_fail/readFail035.hs

{-# LANGUAGE Haskell98 #-}

module Foo where

data Foo

