testsuite/tests/parser/should_fail/readFail035.stderr

readFail035.hs:6:1: error: [GHC-32478]
    • ‘Foo’ has no constructors
    • In the data declaration for ‘Foo’
    Suggested fix:
      Perhaps you intended to use the ‘EmptyDataDecls’ extension
